hero-association/deploy/k8s/frontend/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: hero-association
spec:
  parentRefs:
    - name: hero-association
      sectionName: https
  hostnames:
    - heroassociation.test
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
